# llm-harness

./: .gitignore  README.md  __init__.py  harness.py  llm_model.py  pyproject.toml  pyrightconfig.json
config/: api_keys.example.yaml  models.example.yaml  models.yaml
docs/: TODO.md  test_sets_for_sonnet.md
src/llm_harness/: __init.py__  harness.py
tools/: check_api_keys.py  list_together_models.py  test_connections.py
