[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmharness"
version = "0.1.2"
description = "A flexible harness for working with multiple LLM providers"
readme = "README.md"
requires-python = ">=3.11"                                                 # Since you're on Python 3.12
license = "MIT"
authors = [{ name = "Rob Kunkle", email = "rob.kunkle@gmail.com" }]

dependencies = ["litellm", "pyyaml", "python-dotenv>=1.0.0", "rich>=13.7.0"]

[tool.setuptools.packages.find]
where = ["."]                             #  "." indicates project root, so easy
include = ["llmharness", "config/*.yaml"]
